--- a/sass/themes/_advice.scss
+++ b/sass/themes/_advice.scss
@@ -103,7 +103,7 @@ category: Advices
 ### Description
 `<figcaption>` should be single inside its parent. Check the spec!
 
-### Referencess
+### References
 * <https://www.w3.org/html/wg/drafts/html/master/grouping-content.html#the-figure-element>
 
 ### Selector
@@ -115,7 +115,7 @@ figcaption:not(:first-of-type)
 ``` html
 <figure role="group">
   <figcaption>I'm the caption.</figcaption>
-  <img src="static/ffoodd.png" alt="Needed" width="144" height="144" />
+  <img src="/static/ffoodd.png" alt="Needed" width="144" height="144" />
   <figcaption>I'm the caption too.</figcaption>
 </figure>
 ```
@@ -135,7 +135,7 @@ category: Advices
 ### Description
 `<figcaption>` should be first or last child. Nothing else.
 
-### Referencess
+### References
 * <https://www.w3.org/html/wg/drafts/html/master/grouping-content.html#the-figure-element>
 
 ### Selector
@@ -146,7 +146,7 @@ figcaption:not(:first-child):not(:last-child)
 ### Test
 ``` html
 <figure role="group">
-  <img src="static/ffoodd.png" alt="Needed" width="144" height="144" />
+  <img src="/static/ffoodd.png" alt="Needed" width="144" height="144" />
   <figcaption>I'm the caption.</figcaption>
   <p>I'm something else. Oh, wait.</p>
 </figure>
@@ -219,7 +219,7 @@ category: Advices
 ### Description
 Obviously, a button role on a link is probably not so hard to move to an authentic button tag, isn't it?
 
-### Referencess
+### References
 * <https://github.com/Heydon/REVENGE.CSS/blob/master/revenge.css#L174>
 
 ### Selector
@@ -248,7 +248,7 @@ category: Advices
 A link opening new tab or window should warn user about its behaviour.
 You could use a `[title]`, for example.
 
-### Referencess
+### References
 * <https://references.modernisation.gouv.fr/rgaa/criteres.html#crit-13-2>
 * <https://www.w3.org/TR/WCAG20/#navigation-mechanisms-refs>
 * <https://www.w3.org/TR/WCAG20/#consistent-behavior-no-extreme-changes-context>
@@ -281,7 +281,7 @@ category: Advices
 ### Description
 A link to a file should indicate the file format, the file size and if different from the main document, the file language.
 
-### Referencess
+### References
 * <https://references.modernisation.gouv.fr/rgaa/criteres.html#crit-13-6>
 * <https://references.modernisation.gouv.fr/rgaa/criteres.html#crit-13-7>
 * <https://www.w3.org/TR/WCAG20/#navigation-mechanisms-refs>
@@ -336,7 +336,7 @@ category: Advices
 ### Description
 Some ARIA roles should be unique: at least `[main]`, `[search]`, `[banner]`, `[contentinfo]`.
 
-### Referencess
+### References
 * <https://references.modernisation.gouv.fr/rgaa/criteres.html#crit-12-10>
 * <https://www.w3.org/TR/WCAG20/#navigation-mechanisms-skip>
 
@@ -372,7 +372,7 @@ category: Advices
 ### Description
 A `[class]` or `[id]` containing search may carry the search ARIA `[role]`.
 
-### Referencess
+### References
 * <https://references.modernisation.gouv.fr/rgaa/criteres.html#crit-12-10>
 * <https://www.w3.org/TR/WCAG20/#navigation-mechanisms-skip>
 
@@ -416,7 +416,7 @@ category: Advices
 ### Description
 A `[required]` or `[aria-required]` should be visually understandable.
 
-### Referencess
+### References
 * <https://references.modernisation.gouv.fr/rgaa/criteres.html#crit-11-10>
 * <https://www.w3.org/TR/WCAG20/#minimize-error-cues>
 
@@ -459,7 +459,7 @@ category: Advices
 ### Description
 A `[hidden]` or `[aria-hidden]` may not be a good idea if hiding content.
 
-### Referencess
+### References
 * <https://references.modernisation.gouv.fr/rgaa/criteres.html#crit-10-13>
 * <https://www.w3.org/TR/WCAG20/#ensure-compat-rsv>
 
@@ -524,7 +524,7 @@ category: Advices
 ### Description
 A `<video>` or `<audio>` needs a few things to be accessible, like a transcript, subtitles, controls. This kind of things.
 
-### Referencess
+### References
 * <https://references.modernisation.gouv.fr/rgaa/criteres.html#crit-4-1>
 * <https://www.w3.org/TR/WCAG20/#media-equiv-av-only-alt>
 * <https://www.w3.org/TR/WCAG20/#media-equiv-audio-desc>
@@ -558,7 +558,7 @@ category: Advices
 ### Description
 A `[title]` on any graphic content should be equal to `[aria-label]` or `[alt]`.
 
-### Referencess
+### References
 * <https://references.modernisation.gouv.fr/rgaa/criteres.html#crit-1-3>
 * <https://www.w3.org/TR/WCAG20/#text-equiv-all>
 * <https://www.w3.org/WAI/tutorials/images/decision-tree/>
@@ -573,7 +573,7 @@ svg[aria-label][title]
 
 ### Test
 ``` html
-<img src="static/ffoodd.png" alt="I'm an alternative text!" title="I'm a title!" height="144" width="144"><span>†</span>
+<img src="/static/ffoodd.png" alt="I'm an alternative text!" title="I'm a title!" height="144" width="144"><span>†</span>
 ```
 */
 img[alt][title],
@@ -620,7 +620,7 @@ category: Advices
 ### Description
 A `[scope]` can be col or row (and nothing else) and it has to be relevant.
 
-### Referencess
+### References
 * <https://references.modernisation.gouv.fr/rgaa/criteres.html#crit-5-7>
 * <https://www.w3.org/TR/WCAG20/#content-structure-separation-programmatic>
 * <https://www.w3.org/TR/WCAG-TECHS/H63.html>
@@ -668,7 +668,7 @@ category: Advices
 ### Description
 A `[role="presentation"]` is a good idea for any `<table>` used for layout, but a bad thing for a data table. Double check this!
 
-### Referencess
+### References
 * <https://references.modernisation.gouv.fr/rgaa/criteres.html#crit-5-3>
 * <https://www.w3.org/TR/WCAG20/#content-structure-separation-sequence>
 
@@ -706,7 +706,7 @@ category: Advices
 ### Description
 Yet it's valid to skip the `[href]` attribute on a link, it's probably better to double check, isn't it?
 
-### Referencess
+### References
 * <https://www.w3.org/TR/html/links.html#links-created-by-a-and-area-elements>
 * <https://github.com/Heydon/REVENGE.CSS/blob/master/revenge.css#L161>
 * <https://github.com/Heydon/REVENGE.CSS/blob/master/revenge.css#L165>
@@ -736,7 +736,7 @@ category: Advices
 ### Description
 When possible, try to use HTTPS.
 
-### Referencess
+### References
 * <https://twitter.com/fvsch/status/921748801542639616>
 * <https://transparencyreport.google.com/https/overview?hl=en>
 * <https://letsencrypt.org/>
